# cloud-security-agent-skills

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  bastion.yaml  bootstrap.ps1  bootstrap.sh  mcp-test.yaml  pyproject.toml  requirements-lock.txt  requirements.txt  skills-index.md
.aiv/: config.yaml  design-rules.yaml
.claude/commands/: aws-security-review.md  posture-check.md
.cursor/rules/: 00-cloud-security-core.mdc  10-zero-trust-identity.mdc  20-bastion-gateway-required.mdc  30-cloud-waf-routing.mdc
.gemini/commands/: posture-check.md
.github/: copilot-instructions.md  dependabot.yml
agent/: __init__.py  bastion_gateway.py  bastion_proxy.py  bastion_wrapper.py  harness_cli.py  orchestrator.py  skills_loader.py
docs/: architecture.md  bastion-policy.md  cursor-setup.md  folder-structure.md  getting-started.md  identity-layer.md  jetbrains-setup.md  plugin-publishing.md  project-status.md  sme-review.md  testing.md  vscode-setup.md
hooks/: README.md  hooks.json  no-static-secrets-guard.ps1  no-static-secrets-guard.sh  session-start.ps1  session-start.sh
jetbrains-plugin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
mcp/: README.md  cloud-security-agent.mcp.json
references/: multi-cloud-control-matrix.md
registry/: assets.json  install-manifest.json  provenance.yaml
scripts/: install.sh  sync-install-manifest.py  validate-assets.py  validate-plugin-manifest.py  validate-skills.py
security/: __init__.py  alibaba.py  aws.py  azure.py  base.py  gcp.py  ibm.py  introspection.py  oci.py  pcf.py
starter-packs/: aws-agent-starter.yaml  azure-agent-starter.yaml  gcp-agent-starter.yaml  multi-cloud-agent-starter.yaml
templates/: bastion-mcp-client.json  zero-trust-posture-checklist.yaml
vscode-extension/: .vscodeignore  README.md  extension.js  package.json
(+41 files in other folders)
